...
    ) {
        val write: @Composable () -> Unit = {
            ComposeFabHalf(
                icon = R.drawable.ic_tabler_plus,
                description = "書いて追加",
                onClick = onWrite,
                modifier = Modifier.testTag("open-capture-action"),
            )
        }
        val speak: @Composable () -> Unit = {
            ComposeFabHalf(
                icon = R.drawable.ic_tabler_microphone,
                description = "話して追加",
...
